# djinni-example-cc

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  zbuild.sh
.github/workflows/: build.yml
cmake/: djinni_generated_files.cmake.in  djinni_process_idl.cmake
idl/: storage.djinni
src/: storage.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  storagecpp_test.cpp
tests/java/: CMakeLists.txt  LogStub.java  StorageJavaTest.java  StorageTest.java
tests/java/dev/xlcpp/djinni/: NativeLibLoader.java
tests/oc/: CMakeLists.txt  storageoc_test.m
tests/swift/: CMakeLists.txt  main.swift  storage-bridge.h  store_test.swift
tests/swift/Storage/: Storage.h  module.modulemap
